--- a/index.html
+++ b/index.html
@@ -151,11 +151,12 @@
         $.totalStorage.setItem("stat_sat", 1);
         $.totalStorage.setItem("stat_invint", 1);
         $.totalStorage.setItem("stat_old_budget", 0);
+        $.totalStorage.setItem("avSalary",0);
         $.totalStorage.setItem("stat_budget", 10000);
         alert('New Game');
-        paintEmpField();
-        updateHeader();
-        //window.setTimeout("location.reload(true);",0);
+        //paintEmpField();
+        //updateHeader();
+        window.setTimeout("location.reload(true);",0);
       });
         
       $('.add').click(function(e){
@@ -165,11 +166,10 @@
         
       $('.fireEmp').click(function(e){
         e.preventDefault();
-        var key = "emp";
-        employeeInformation.splice($("#empId").val(),1);
-        var val = employeeInformation;
-        $.totalStorage(key, val);
-        alert('Employee got fired! new value for key ' + key+": "+val+";");
+        employeeInformation.splice(position,1);
+        alert(employeeInformation);
+        $.totalStorage.setItem("emp", employeeInformation);
+        alert('Employee got fired! new value for key emp: '+employeeInformation+";");
         window.setTimeout("location.reload(true);",0);
         //paintEmpField();
       });
@@ -229,7 +229,7 @@
           }
           document.write("<div class='three columns'>");
           document.write("<a href='#employee_hire' data-router='section' id='emp"+x+"'>");
-          document.write("<img src='' id='empPic"+x+"' onclick='changeProfileInfo("+x+");'>");
+          document.write("<img id='empPic"+x+"' onclick='changeProfileInfo("+x+");'>");
           document.write("</a>");
           document.write("</div>");
           if(x!=0 && x%3==0)
